# pm-jupytext

./: .gitignore  README.md  pyproject.toml
src/pm_jupytext/: plugin.py
tests/: notebook.py  test.bash
