[project]
name = "pm-jupytext"
version = "0.1.0"
description = "Jupytext input support for papermill"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupytext>=1.16.4",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."papermill.io"]
"jupytext:" = "pm_jupytext.plugin:PyHandler"
